plugins {
    id 'org.unbroken-dome.test-sets' version '1.2.0'
}

ext.libraryVersions = [
        javaee                  : '7.0',
        wildfly                 : '8.0.0.Final',
        junit                   : '4.12',
        assertj                 : '3.2.0',
        arquillian              : '1.1.10.Final',
        shrinkWrapResolverGradle: '2.2.0'
]

ext.jbossHome = hasProperty('jbossHome') ? jbossHome : "${rootDir}\\wildfly-8.0.0.Final"

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'idea'

defaultTasks 'clean', 'test', 'build'

description = 'Web Project'
version = '1.0'

String appName = 'scrumus'
String vendor = 'Scrumus'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
    maven { url 'http://repository.jboss.org/nexus/content/groups/public' }
    maven { url 'http://repository.jboss.org/nexus/content/repositories/deprecated' }
    maven { url 'http://repo.jfrog.org/artifactory/repo' }
}

configurations {
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
}

testSets {
    integrationTest { dirName = 'src/it/java' }
}

sourceSets {
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/it/java')
        }
        resources.srcDir file('src/it/resources')
    }
}

project.integrationTest {
    outputs.upToDateWhen { false }
}

check.dependsOn integrationTest
integrationTest.mustRunAfter test
dependencies {
    providedCompile 'org.projectlombok:lombok:1.16.6'
    compile 'org.wildfly:wildfly-spec-api:8.0.0.Final'
    compile 'org.slf4j:slf4j-simple:1.7.7'
    compile 'org.apache.commons:commons-collections4:4.0'

    testCompile 'org.powermock:powermock-module-junit4:1.6.3'
    testCompile 'org.powermock:powermock-api-mockito:1.6.3'

    testCompile "junit:junit:${libraryVersions.junit}"
    testCompile "org.assertj:assertj-core:${libraryVersions.assertj}"
    integrationTestCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-depchain:2.1.0'
    integrationTestCompile 'org.jboss.arquillian:arquillian-bom:1.1.10.Final'
    integrationTestCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.1.10.Final'
    integrationTestCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-impl-gradle-embedded-archive:2.2.0'
    integrationTestCompile 'org.jboss.logging:jboss-logging:3.1.4.GA'
    integrationTestCompile 'org.wildfly:wildfly-arquillian-container-managed:8.2.1.Final'
}

integrationTest {
    jvmArgs '-XX:MaxPermSize=256m'

    /**
     * Installation of JBOSS to use for testing, this can be set here
     * or in the arquillian.xml.
     */
    environment 'JBOSS_HOME', rootProject.jbossHome
    /**
     * WildFly embedded default logging
     */
    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
}

